--- a/server.cfg
+++ b/server.cfg
@@ -1,8 +1,7 @@
 endpoint_add_tcp "0.0.0.0:30120"
 endpoint_add_udp "0.0.0.0:30120"
 
-#stop monitor
-stop webadmin
+exec resources/resources.cfg
 
 sv_scriptHookAllowed 0
 
