feat(works): Added works

--- a/resources/resources.cfg
+++ b/resources/resources.cfg
@@ -16,6 +16,7 @@ ensure PolyZone
 
 # Jobs
 ensure robberys
+ensure works
 
 # Scripts
 ensure admin
@@ -30,7 +31,6 @@ ensure evidence
 ensure garages
 ensure homes
 ensure hud
-ensure inspect
 ensure inventory
 ensure notify
 ensure player
@@ -43,7 +43,6 @@ ensure tablet
 ensure target
 ensure taskbar
 ensure tattoos
-ensure trunkchest
 ensure vehmenu
 
 # Smartphone
