doc(Resources): Update Resources

--- a/resources/resources.cfg
+++ b/resources/resources.cfg
@@ -14,6 +14,10 @@ ensure logsystem
 ensure pma-voice
 ensure PolyZone
 
+#Addons
+ensure [Addons]
+ensure [Misc]
+
 # Jobs
 ensure robberys
 ensure works
@@ -22,7 +26,7 @@ ensure works
 ensure admin
 ensure alternative
 ensure bank
-ensure barbershop
+#ensure barbershop
 ensure doors
 ensure dynamic
 ensure emergency
@@ -36,9 +40,9 @@ ensure notify
 ensure player
 ensure radio
 ensure shops
-ensure skinshop
+#ensure skinshop
 ensure sounds
-ensure spawn
+#ensure spawn
 ensure tablet
 ensure target
 ensure taskbar
@@ -46,3 +50,6 @@ ensure tattoos
 ensure vehmenu
 
 # Smartphone
+ensure smartphone-app
+ensure smartphone-job
+ensure smartphone
