fix(Resources): Uncommented spawn, skinshop and barbershop

--- a/resources/resources.cfg
+++ b/resources/resources.cfg
@@ -26,7 +26,7 @@ ensure works
 ensure admin
 ensure alternative
 ensure bank
-#ensure barbershop
+ensure barbershop
 ensure doors
 ensure dynamic
 ensure emergency
@@ -40,9 +40,9 @@ ensure notify
 ensure player
 ensure radio
 ensure shops
-#ensure skinshop
+ensure skinshop
 ensure sounds
-#ensure spawn
+ensure spawn
 ensure tablet
 ensure target
 ensure taskbar
