doc(fxmanifest): Changes fxmanifest settings, to shared-scripts

--- a/resources/resources.cfg
+++ b/resources/resources.cfg
@@ -42,7 +42,6 @@ ensure shops
 ensure skinshop
 ensure sounds
 ensure spawn
-ensure tablet
 ensure target
 ensure taskbar
 ensure tattoos
@@ -50,5 +49,5 @@ ensure vehmenu
 
 # Smartphone
 ensure smartphone-app
-ensure smartphone-job
+ensure smartphone-jobs
 ensure smartphone
