fix(DBConnection): Added OxMYSQL connection sample

--- a/server.cfg
+++ b/server.cfg
@@ -1,6 +1,11 @@
 endpoint_add_tcp "0.0.0.0:30120"
 endpoint_add_udp "0.0.0.0:30120"
 
+# OxMYSQL Connection
+set mysql_connection_string "server=127.0.0.1;uid=root;password=;database=alternative;charset=utf8mb4"
+set mysql_transaction_isolation_level 2
+set mysql_slow_query_warning 200
+
 exec resources/resources.cfg
 
 sv_scriptHookAllowed 0
